renaming to RedCat

--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-	"name": "surikat/templix",
+	"name": "redcatphp/templix",
 	"type": "library",
 	"description": "Templix - HTML5 based Template Engine with Recursive Extends and CSS3 Selectors to work on DOM like with Jquery",
 	"keywords": ["Templix","Template","Template Engine","HTML5","CSS3 Selectors","Recursive Extends","XML","Jquery","DOM","Template Motor"],
 	"license": ["LGPL-3.0+","CC0-1.0"],
-	"homepage": "https://github.com/surikat/Templix",
+	"homepage": "https://github.com/redcatphp/Templix",
 	"authors": [
 		{
 			"name": "Jo Surikat",
