--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,12 @@
 	"description": "Templix - HTML5 based Template Engine with Recursive Extends and CSS3 Selectors to work on DOM like with Jquery",
 	"keywords": ["Templix","Template","Template Engine","HTML5","CSS3 Selectors","Recursive Extends","XML","Jquery","DOM","Template Motor"],
 	"license": ["LGPL-3.0+","CC0-1.0"],
-	"homepage": "https://github.com/redcatphp/Templix",
+	"homepage": "http://redcatphp.com/templix-template-engine",
 	"authors": [
 		{
 			"name": "Jo Surikat",
 			"email": "jo@surikat.pro",
-			"homepage": "http://redcatphp.com/templix-template-engine",
+			"homepage": "http://surikat.pro",
 			"role": "Developer"
 		}
 	],
